[package]
license = "MIT"
keywords = ["test"]
description = "A simple testing utility that lets you test pairs"
repository = "https://github.com/rosew0od/test_pairs"
readme = "README.md"
name = "test_pairs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
